crates/rattler/src/install/snapshots/rattler__install__entry_point__test__entry_point_script.snap
---
source: crates/rattler/src/install/entry_point.rs
expression: script
---
#!/prefix\bin/python3.11
# -*- coding: utf-8 -*-
import re
import sys

from jupyterlab.labapp import main

if __name__ == '__main__':
	sys.argv[0] = re.sub(r'(-script\.pyw?|\.exe)?$', '', sys.argv[0])
	sys.exit(main())

